--- a/dockerfile/updater/Dockerfile
+++ b/dockerfile/updater/Dockerfile
@@ -11,13 +11,13 @@ RUN apt-get install -y pdns-server pdns-backend-sqlite3 pdns-tools
 RUN mkdir -p /etc/powerdns
 RUN sqlite3 /var/spool/powerdns/powerdns.db < /usr/share/doc/pdns-backend-sqlite3/schema.sqlite3.sql
 RUN chown pdns:pdns /var/spool/powerdns/powerdns.db
-RUN mkdir /tmp/gopath
-ENV GOPATH /tmp/gopath
+RUN mkdir /root/gopath
+ENV GOPATH /root/gopath
 RUN go get -u github.com/alecthomas/gometalinter
-ENV PATH ${PATH}:/tmp/gopath/bin
-RUN cd /tmp && curl https://glide.sh/get | sh && rm -rf glide*
-RUN mkdir -p /tmp/gopath/src/github.com/potix
-RUN cd /tmp/gopath/src/github.com/potix && git clone https://github.com/potix/pdns-record-updater 
-RUN cd /tmp/gopath/src/github.com/potix/pdns-record-updater && glide update && go build
-ENTRYPOINT ["/tmp/gopath/src/github.com/potix/pdns-record-updater/pdns-record-updater"]
+ENV PATH ${PATH}:/root/gopath/bin
+RUN cd /root && curl https://glide.sh/get | sh && rm -rf glide*
+RUN mkdir -p /root/gopath/src/github.com/potix
+RUN cd /root/gopath/src/github.com/potix && git clone https://github.com/potix/pdns-record-updater 
+RUN cd /root/gopath/src/github.com/potix/pdns-record-updater && glide update && go build
+ENTRYPOINT ["/root/gopath/src/github.com/potix/pdns-record-updater/pdns-record-updater"]
 CMD ["-mode", "updater", "-config", "-config", "/etc/powerdns/pdns-record-updater.yaml"]
